--- a/CSVファイル統合.ipynb
+++ b/CSVファイル統合.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "825d99f0-79bf-480e-be92-504538525b4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing...\n",
+      "done.\n"
+     ]
+    }
+   ],
    "source": [
     "#同一フォルダ内のファイルを結合\n",
     "\n",
@@ -22,9 +31,9 @@
     "time_string = now.strftime(\"%H%M%S\")\n",
     "\n",
     "#結合したいCSVファイルが格納されているフォルダを指定\n",
-    "folder = \"output/Co-Occurrence\"\n",
+    "folder = \"output/Centrality/ranked\"\n",
     "#出力ファイル名を指定\n",
-    "output = f\"output/Co-Occurrence/Merged_Co-Occurrence_{date_time_string}.csv\"\n",
+    "output = f\"output/Centrality/ranked/Merged_Centrality_{date_time_string}.csv\"\n",
     "\n",
     "print(\"processing...\")\n",
     "\n",
@@ -32,7 +41,7 @@
     "df_list = [pd.read_csv(f) for f in all_files]\n",
     "merged_df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
-    "merged_df.to_csv(output, index=False)\n",
+    "merged_df.to_csv(output, index=False, encoding=\"utf-8-sig\")\n",
     "\n",
     "print(\"done.\")"
    ]
