--- a/形態素解析・共起抽出_合算モード追加tmp_20250518.ipynb
+++ b/形態素解析・共起抽出_合算モード追加tmp_20250518.ipynb
@@ -227,34 +227,39 @@
     "#◆対象企業の読込方法   \n",
     "#0はcsvファイルから順次読込・処理、1は個別に指定\n",
     "company_selection_mode = 1\n",
+    "\n",
     "#◆XMLからの抽出範囲   \n",
     "#0はcontents.csvで指定した範囲指定全て、1はマニュアル指定（リスト）\n",
-    "column_selection_mode = 0 \n",
+    "column_selection_mode = 1\n",
+    "\n",
+    "#column_selection_mode = 1の場合に有効\n",
+    "#0は指定した指定した範囲ごとに計算、1はリストで指定した範囲を合算して計算\n",
+    "column_calculation_mode = 1\n",
+    "\n",
     "#◆出力ファイル出力方法　\n",
     "#0は一つの企業ごとに複数の指定範囲を１ファイルで出力、1は企業ごと・指定範囲ごとに出力\n",
-    "file_output_mode =0 \n",
-    "#==========================================================================\n",
-    "#動作モードに応じた設定（csvから読み込まない場合、以下に記述）\n",
-    "#==========================================================================\n",
-    "#company_selection_mode = 1 の場合の個別指定項目\n",
+    "file_output_mode =1 \n",
+    "# ==========================================================================\n",
+    "# 動作モードに応じた設定（csvから読み込まない場合、以下に記述）\n",
+    "# ==========================================================================\n",
+    "# company_selection_mode = 1 の場合の個別指定項目\n",
     "security_code = '77510'\n",
     "company_name = 'キヤノン'\n",
     "industry_sector = '電気機器'\n",
     "target_folder = '77510_キヤノン'\n",
     "pdf_filename =  'canon-int-2025-j.pdf'\n",
     "temp_list = [security_code, company_name, industry_sector, target_folder, pdf_filename]\n",
-    "#---------------------------------------------------------------------------\n",
-    "#column_selection_mode = 1 の場合の抽出条件グループ\n",
-    "#target_columns = ['経営者', '価値創造', 'ESG', '財務', '知的資本', '人的資本, '社会関係資本', '流通', 'マーケティング', 'all']\n",
-    "target_columns = ['経営者']\n",
+    "\n",
+    "# column_selection_mode = 1 の場合の抽出条件グループ\n",
+    "# target_columns = ['経営者', '価値創造', 'ESG', '財務', '知的資本', '人的資本, '社会関係資本', '流通', 'マーケティング', 'all']\n",
+    "target_columns = ['経営者', '価値創造', '知的資本']\n",
     "# contents.csvのうち抽出条件範囲でない列を除外：これはmodeによらず共通\n",
     "excluded_columns = ['keyword', 'page', 'origin', '表示']\n",
-    "#---------------------------------------------------------------------------\n",
+    "# ---------------------------------------------------------------------------\n",
     "\n",
-    "\n",
-    "#読込対象企業の企業名、格納フォルダ等の情報\n",
-    "#company_selection_modeに応じた処理\n",
-    "#company_selection_mode == 0の場合は指定したファイル（csv)から\n",
+    "# 読込対象企業の企業名、格納フォルダ等の情報\n",
+    "# company_selection_modeに応じた処理\n",
+    "# company_selection_mode == 0の場合は指定したファイル（csv)から\n",
     "if company_selection_mode == 0 :\n",
     "    df_target_company_info = pd.read_csv(target_info_path)\n",
     "else:\n",
@@ -264,47 +269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ea1954e5-2c7f-4343-8291-f2d94b0a1cba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing ir/2025/77510_キヤノン/canon-int-2025-j.xml\n",
-      "経営者\n",
-      "価値創造\n",
-      "ESG\n",
-      "財務\n",
-      "知的資本\n",
-      "人的資本\n",
-      "社会関係資本\n",
-      "流通\n",
-      "マーケティング\n",
-      "all\n",
-      "processed ir/2025/77510_キヤノン/canon-int-2025-j.xml at 20250515-233649.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#以下、企業単位で処理・出力\n",
+    "# 以下、企業単位で処理・出力\n",
     "for index, row in df_target_company_info.iterrows():\n",
-    "    #target_folder = security_code + '_' + company_name\n",
+    "    # target_folder = security_code + '_' + company_name\n",
     "\n",
-    "    target_columns = []\n",
     "    df_count_combined = pd.DataFrame()\n",
     "    df_combination_ex_combined = pd.DataFrame()    \n",
     "    df_centrality_combined = pd.DataFrame()    \n",
     "\n",
-    "    #ファイル識別に利用する年月日文字列の取得（企業の処理単位で取得）\n",
+    "    # ファイル識別に利用する年月日文字列の取得（企業の処理単位で取得）\n",
     "    # 現在の時刻情報を取得\n",
     "    now = datetime.datetime.now()\n",
     "    # 年月日と時刻の文字列を生成\n",
     "    date_time_string = now.strftime(\"%Y%m%d-%H%M%S\")\n",
     "    time_string = now.strftime(\"%H%M%S\")\n",
     "    \n",
-    "    #行ごとの値を読み込み\n",
+    "    # 行ごとの値を読み込み\n",
     "    row_security_code = row['コード']\n",
     "    row_company_name = row['企業名']\n",
     "    row_industy_sector = row['業種分類']\n",
@@ -314,39 +299,56 @@
     "    row_xml_path = row_target_folder + '/' + row_xml_filename\n",
     "    row_info_folder = row_target_folder + '/' + info_folder\n",
     "    row_contents_csv = row_info_folder + '/' + 'contents.csv'\n",
-    "    #print(row_security_code, row_info_folder, row_xml_filename)\n",
+    "    # print(row_security_code, row_info_folder, row_xml_filename)\n",
     "    print(f\"Processing {row_xml_path}\")\n",
     "\n",
     "    # contents.CSVを読み込む\n",
     "    df_tbl_of_cnt = pd.read_csv(row_contents_csv)\n",
-    "    #print(df_tbl_of_cnt)\n",
+    "    # print(df_tbl_of_cnt)\n",
     "\n",
     "    # column_selection_mode == 0の場合、テキストデータを取得する範囲の名称を動的に抽出\n",
-    "    #（column_selection_mode == 1の場合はtarget_columnsを手動で記載したものを読み込み）\n",
+    "    #  target_columnsはモード設定のフラグ直後に定義されているので、それを条件に応じ書き換え\n",
     "    if column_selection_mode == 0:\n",
     "        if df_tbl_of_cnt.empty:\n",
     "            target_columns = []\n",
     "        else:\n",
+    "            #csvファイルからカラム名を取得して設定\n",
     "            target_columns = [col for col in df_tbl_of_cnt.columns if col not in excluded_columns]\n",
-    "    #print(target_columns)\n",
-    "    \n",
-    "    \n",
+    "    # column_selection_mode == 1の場合は、モード設定のフラグ直後に記載したtarget_columnsを参照\n",
+    "    # ただし、手動で記載したものを読み込み\n",
+    "    else:\n",
+    "    # column_selection_mode == 1 の場合、\n",
+    "        # column_caluculation_mode == 0なら、デフォルトの（モード指定直後に記載した）target_columnsを使う\n",
+    "        # column_caluculation_mode == 1の場合は、target_columnsのいずれかでフラグが立った目次項目を使用、target_columnsもその後書き換え\n",
+    "        if column_calculation_mode == 1:  \n",
+    "            # 読み込む目次項目（target_table_of_contents）を設定：target_columns内の項目のいずれかでフラグが立った目次項目を対象\n",
+    "            merged_target_table_of_contents = df_tbl_of_cnt[df_tbl_of_cnt[target_columns].eq(1).any(axis=1)]['keyword'].dropna().unique().tolist()\n",
+    "            # 合算モードの場合は、target_columnsを記載されたリスト項目によって書き換え\n",
+    "            # target_columns = ['AAA','BBB']　なら、target_columns = ['AAA+BBB']にしてしまう\n",
+    "            target_columns = ['+'.join(target_columns)]\n",
+    "\n",
+    "    # print(target_columns)\n",
+    "\n",
     "    # 各ターゲット列（target_columnsリストで指定された列）に応じた処理\n",
     "    if target_columns == []:\n",
     "        logging.info(\"target_columnsが空です。ターゲット列の処理はスキップします。\")\n",
     "    else:\n",
     "        for col in target_columns:\n",
-    "            print(f\"{col}\")            \n",
-    "            #print(f\"\\n=== タグ: {col} ===\\n\")\n",
-    "            target_table_of_contents = load_target_table_of_contents(df_tbl_of_cnt, col)\n",
+    "            # print(f\"{col}\")            \n",
+    "            # print(f\"\\n=== タグ: {col} ===\\n\")\n",
+    "            if column_calculation_mode == 0:  \n",
+    "                target_table_of_contents = load_target_table_of_contents(df_tbl_of_cnt, col)\n",
+    "            else:\n",
+    "                target_table_of_contents = merged_target_table_of_contents\n",
+    "\n",
     "            output_text = extract_content_by_keywords(row_xml_path, target_table_of_contents)\n",
-    "            #print(output_text)\n",
+    "            # print(output_text)\n",
     "    \n",
-    "            #'。'で改行、一文の範囲を明確にする\n",
+    "            # '。'で改行、一文の範囲を明確にする\n",
     "            separated_text = re.sub(r'。','。\\n', output_text)\n",
     "            tokenized_text_list = post_tk(tk.mecab_tokenizer(pre_tk(separated_text, eliminate_list)))\n",
-    "            #Merged_Extracted_tokenized_list = [item for _, sublist in Extracted_tokenized_page_text for item in sublist]\n",
-    "            #print(tokenized_text_list)\n",
+    "            # Merged_Extracted_tokenized_list = [item for _, sublist in Extracted_tokenized_page_text for item in sublist]\n",
+    "            # print(tokenized_text_list)\n",
     "    \n",
     "            #辞書形式で単語をカウント\n",
     "            counter = Counter(tokenized_text_list)\n",
@@ -355,7 +357,7 @@
     "            # DataFrameを件数でソート\n",
     "            df_count = df_count.sort_values(by='件数', ascending=False)\n",
     "\n",
-    "            #df_countが[]の場合（tokenized_listが[]の場合）は、単語リスト出力とワードクラウドの作成をスキップ\n",
+    "            # df_countが[]の場合（tokenized_listが[]の場合）は、単語リスト出力とワードクラウドの作成をスキップ\n",
     "            if df_count.empty:\n",
     "                logging.info(f\"{row_company_name}で、{col}で指定した範囲で抽出された単語がありません。\")\n",
     "            else:\n",
@@ -550,8 +552,8 @@
     "        file_name_centrality = f\"output/Centrality/{row_security_code}_{row_company_name}_combined_Centrality_{analyzed_links}_{date_time_string}.csv\"\n",
     "        df_centrality_combined.to_csv(file_name_centrality, encoding=\"utf_8_sig\", index=False)\n",
     "\n",
-    "    print(f\"processed {row_target_folder}/{row_xml_filename} at {date_time_string}.\")\n",
-    "    logging.info(f\"processed {row_target_folder}/{row_xml_filename} at {date_time_string}.\")\n",
+    "    print(f\"{row_target_folder}/{row_xml_filename} processed at {date_time_string}.\")\n",
+    "    logging.info(f\"{row_target_folder}/{row_xml_filename} processed at {date_time_string}.\")\n",
     "    "
    ]
   },
