--- a/CSVファイル統合.ipynb
+++ b/CSVファイル統合.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "825d99f0-79bf-480e-be92-504538525b4b",
    "metadata": {},
    "outputs": [
@@ -30,10 +30,13 @@
     "date_time_string = now.strftime(\"%Y%m%d-%H%M%S\")\n",
     "time_string = now.strftime(\"%H%M%S\")\n",
     "\n",
-    "#結合したいCSVファイルが格納されているフォルダを指定\n",
-    "folder = \"output/Centrality/ranked\"\n",
-    "#出力ファイル名を指定\n",
-    "output = f\"output/Centrality/ranked/Merged_Centrality_{date_time_string}.csv\"\n",
+    "#結合したいCSVファイルの格納フォルダと出力ファイル名を指定\n",
+    "# folder = f\"output/Centrality\"\n",
+    "# output = f\"output/Centrality/Merged_Centrality_{date_time_string}.csv\"\n",
+    "# folder = f\"output/Co-Occurrence\"\n",
+    "# output = f\"output/Co-Occurrence/Merged_Co-Occurrence_{date_time_string}.csv\"\n",
+    "folder = f\"output/WordList\"\n",
+    "output = f\"output/WordList/Merged_WordList_{date_time_string}.csv\"\n",
     "\n",
     "print(\"processing...\")\n",
     "\n",
@@ -45,6 +48,14 @@
     "\n",
     "print(\"done.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a01f3939-9347-4383-be7d-5b075ff65d18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
