--- a/形態素解析・共起抽出_合算モード追加tmp_20250518.ipynb
+++ b/形態素解析・共起抽出_合算モード追加tmp_20250518.ipynb
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#前処理・関数定義領域"
+    "# 改訂履歴\n",
+    "# 2025/5/19　アウトプットする単語・共起・中心性指標のデータフレームにランクを付与\n"
    ]
   },
   {
@@ -149,7 +150,7 @@
     "            df.loc[df[target_column] == 1, 'keyword']\n",
     "            .dropna()\n",
     "            .drop_duplicates()\n",
-    "            .apply(str.strip)\n",
+    "            .apply(str.strip) #目次に余計なスペースがある時はこの行をコメントアウト\n",
     "            .tolist()\n",
     "        )\n",
     "    except:\n",
@@ -217,42 +218,50 @@
     "data_folder = 'data'\n",
     "base_folder = 'ir/2025'\n",
     "info_folder = 'info'\n",
-    "target_info_file = 'target_company_20250513.csv'\n",
+    "target_info_file = 'target_company_20250524b.csv'\n",
     "target_info_path = data_folder + '/' + target_info_file\n",
     "eliminate_list=[]\n",
     "\n",
     "#==========================================================================\n",
     "#動作モードの指定\n",
     "#==========================================================================\n",
-    "#◆対象企業の読込方法   \n",
-    "#0はcsvファイルから順次読込・処理、1は個別に指定\n",
-    "company_selection_mode = 1\n",
+    "# ◆対象企業の読込方法   \n",
+    "# 0はcsvファイルから順次読込・処理、\n",
+    "# 1は個別に指定\n",
+    "company_selection_mode = 0\n",
     "\n",
-    "#◆XMLからの抽出範囲   \n",
-    "#0はcontents.csvで指定した範囲指定全て、1はマニュアル指定（リスト）\n",
+    "# ◆XMLからの抽出範囲   \n",
+    "# 0はcontents.csvで指定した範囲指定全て、\n",
+    "# 1はマニュアル指定（リスト）\n",
     "column_selection_mode = 1\n",
     "\n",
-    "#column_selection_mode = 1の場合に有効\n",
-    "#0は指定した指定した範囲ごとに計算、1はリストで指定した範囲を合算して計算\n",
+    "# column_selection_mode = 1の場合に有効\n",
+    "# 0は指定した指定した範囲ごとに計算、\n",
+    "# 1はリストで指定した範囲を合算して計算\n",
     "column_calculation_mode = 1\n",
     "\n",
-    "#◆出力ファイル出力方法　\n",
-    "#0は一つの企業ごとに複数の指定範囲を１ファイルで出力、1は企業ごと・指定範囲ごとに出力\n",
-    "file_output_mode =1 \n",
+    "# ◆出力ファイル出力方法　\n",
+    "# 0は一つの企業ごとに複数の指定範囲を１ファイルで出力、\n",
+    "# 1は企業ごと・指定範囲ごとに出力\n",
+    "# ファイル名：　0:xxx_combined 1:xxx_指定範囲名\n",
+    "file_output_mode = 1\n",
+    "\n",
     "# ==========================================================================\n",
     "# 動作モードに応じた設定（csvから読み込まない場合、以下に記述）\n",
     "# ==========================================================================\n",
     "# company_selection_mode = 1 の場合の個別指定項目\n",
-    "security_code = '77510'\n",
-    "company_name = 'キヤノン'\n",
-    "industry_sector = '電気機器'\n",
-    "target_folder = '77510_キヤノン'\n",
-    "pdf_filename =  'canon-int-2025-j.pdf'\n",
+    "security_code = '60130'\n",
+    "company_name = 'タクマ'\n",
+    "industry_sector = '機械'\n",
+    "target_folder = '60130_タクマ'\n",
+    "pdf_filename =  'report-2024A3.pdf'\n",
     "temp_list = [security_code, company_name, industry_sector, target_folder, pdf_filename]\n",
     "\n",
     "# column_selection_mode = 1 の場合の抽出条件グループ\n",
-    "# target_columns = ['経営者', '価値創造', 'ESG', '財務', '知的資本', '人的資本, '社会関係資本', '流通', 'マーケティング', 'all']\n",
-    "target_columns = ['経営者', '価値創造', '知的資本']\n",
+    "# ここで定義したものを会社ごとに参照\n",
+    "# def_target_columns = ['経営者', '価値創造', 'ESG', '財務', '知的資本', '人的資本, '社会関係資本', '流通', 'マーケティング', 'all']\n",
+    "def_target_columns = ['経営者', '価値創造', '知的資本']\n",
+    "# def_target_columns = ['経営者', '価値創造', 'ESG', '財務', '知的資本', '人的資本', '社会関係資本','all']\n",
     "# contents.csvのうち抽出条件範囲でない列を除外：これはmodeによらず共通\n",
     "excluded_columns = ['keyword', 'page', 'origin', '表示']\n",
     "# ---------------------------------------------------------------------------\n",
@@ -269,10 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ea1954e5-2c7f-4343-8291-f2d94b0a1cba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing ir/2025/45300_久光製薬/Integrated_report2024.xml\n",
+      "ir/2025/45300_久光製薬/Integrated_report2024.xml processed at 20250524-142526.\n",
+      "Processing ir/2025/60130_タクマ/report-2024A3.xml\n",
+      "ir/2025/60130_タクマ/report-2024A3.xml processed at 20250524-142538.\n",
+      "All process done.\n"
+     ]
+    }
+   ],
    "source": [
     "# 以下、企業単位で処理・出力\n",
     "for index, row in df_target_company_info.iterrows():\n",
@@ -307,26 +328,33 @@
     "    # print(df_tbl_of_cnt)\n",
     "\n",
     "    # column_selection_mode == 0の場合、テキストデータを取得する範囲の名称を動的に抽出\n",
-    "    #  target_columnsはモード設定のフラグ直後に定義されているので、それを条件に応じ書き換え\n",
+    "    #  def_target_columnsはモード設定のフラグ直後に定義されているので、それを条件に応じ書き換え\n",
     "    if column_selection_mode == 0:\n",
     "        if df_tbl_of_cnt.empty:\n",
     "            target_columns = []\n",
     "        else:\n",
     "            #csvファイルからカラム名を取得して設定\n",
     "            target_columns = [col for col in df_tbl_of_cnt.columns if col not in excluded_columns]\n",
+    "\n",
     "    # column_selection_mode == 1の場合は、モード設定のフラグ直後に記載したtarget_columnsを参照\n",
     "    # ただし、手動で記載したものを読み込み\n",
     "    else:\n",
     "    # column_selection_mode == 1 の場合、\n",
-    "        # column_caluculation_mode == 0なら、デフォルトの（モード指定直後に記載した）target_columnsを使う\n",
-    "        # column_caluculation_mode == 1の場合は、target_columnsのいずれかでフラグが立った目次項目を使用、target_columnsもその後書き換え\n",
+    "        # column_caluculation_mode == 0なら、def_target_columnsをそのまま参照\n",
+    "        if column_calculation_mode ==0:\n",
+    "            target_columns = def_target_columns\n",
+    "\n",
+    "        # column_caluculation_mode == 1の場合は、def_target_columnsのいずれかでフラグが立った目次項目を使用、target_columnsもdef_target_columnsを加工して設定\n",
     "        if column_calculation_mode == 1:  \n",
     "            # 読み込む目次項目（target_table_of_contents）を設定：target_columns内の項目のいずれかでフラグが立った目次項目を対象\n",
-    "            merged_target_table_of_contents = df_tbl_of_cnt[df_tbl_of_cnt[target_columns].eq(1).any(axis=1)]['keyword'].dropna().unique().tolist()\n",
-    "            # 合算モードの場合は、target_columnsを記載されたリスト項目によって書き換え\n",
-    "            # target_columns = ['AAA','BBB']　なら、target_columns = ['AAA+BBB']にしてしまう\n",
-    "            target_columns = ['+'.join(target_columns)]\n",
+    "            merged_target_table_of_contents = df_tbl_of_cnt[df_tbl_of_cnt[def_target_columns].eq(1).any(axis=1)]['keyword'].dropna().unique().tolist()\n",
+    "            # print(merged_target_table_of_contents)\n",
+    "            # 合算モードの場合は、def_target_columnsを記載されたリスト項目によって書き換え\n",
+    "            # def_target_columns = ['AAA','BBB']　なら、target_columns = ['AAA+BBB']にしてしまう\n",
+    "            target_columns = ['+'.join(def_target_columns)]\n",
     "\n",
+    "    # print(f\"selection = {column_selection_mode} calculation = {column_calculation_mode}\")\n",
+    "    # print(f\"target_columns = {target_columns}\")\n",
     "    # print(target_columns)\n",
     "\n",
     "    # 各ターゲット列（target_columnsリストで指定された列）に応じた処理\n",
@@ -334,13 +362,18 @@
     "        logging.info(\"target_columnsが空です。ターゲット列の処理はスキップします。\")\n",
     "    else:\n",
     "        for col in target_columns:\n",
-    "            # print(f\"{col}\")            \n",
+    "            # print(f\"col = {col}\")            \n",
     "            # print(f\"\\n=== タグ: {col} ===\\n\")\n",
-    "            if column_calculation_mode == 0:  \n",
+    "            if column_selection_mode == 0:\n",
     "                target_table_of_contents = load_target_table_of_contents(df_tbl_of_cnt, col)\n",
     "            else:\n",
-    "                target_table_of_contents = merged_target_table_of_contents\n",
+    "                if column_calculation_mode == 0:  \n",
+    "                    target_table_of_contents = load_target_table_of_contents(df_tbl_of_cnt, col)\n",
+    "                else:\n",
+    "                    target_table_of_contents = merged_target_table_of_contents\n",
     "\n",
+    "            # print(f\"calc_mode={column_calculation_mode}\")\n",
+    "            # print(f\"target_table_of_contents = {target_table_of_contents}\")\n",
     "            output_text = extract_content_by_keywords(row_xml_path, target_table_of_contents)\n",
     "            # print(output_text)\n",
     "    \n",
@@ -368,7 +401,23 @@
     "                df_count.insert(3, '分析範囲', col)\n",
     "        \n",
     "                #print(df_count)\n",
-    "        \n",
+    "\n",
+    "                # 単語の件数にランクを付与してdfに格納\n",
+    "                # 対象のスコア列\n",
+    "                score_columns = [\"件数\"]\n",
+    "\n",
+    "                # 分析範囲ごとに順位を付けて新しい列を追加（NaNも考慮）\n",
+    "                for scol in score_columns:\n",
+    "                    # 念のため、数値変換（非数値はNaN化される）\n",
+    "                    df_count[scol] = pd.to_numeric(df_count[scol], errors='coerce')\n",
+    "                \n",
+    "                    # 順位列を追加（NaNは自動的に除外される）\n",
+    "                    df_count[f\"{scol}_Rank\"] = df_count.groupby(\"分析範囲\")[scol].rank(method=\"min\", ascending=False)\n",
+    "                    \n",
+    "                    # 整数として表示する場合、NaN以外をint化（見やすさのため）\n",
+    "                    df_count[f\"{scol}_Rank\"] = df_count[f\"{scol}_Rank\"].apply(lambda x: int(x) if pd.notnull(x) else None)\n",
+    "\n",
+    "                \n",
     "                # 結果をCSVファイルに出力\n",
     "                #個別に出力するパターン\n",
     "                if file_output_mode == 1: \n",
@@ -447,6 +496,20 @@
     "                df_combination_ex.insert(3, '分析範囲', col)\n",
     "        \n",
     "                #print(df_combination_ex)\n",
+    "                # 単語の件数にランクを付与してdfに格納\n",
+    "                # 対象のスコア列\n",
+    "                score_columns = [\"count\"]\n",
+    "\n",
+    "                # 分析範囲ごとに順位を付けて新しい列を追加（NaNも考慮）\n",
+    "                for scol in score_columns:\n",
+    "                    # 念のため、数値変換（非数値はNaN化される）\n",
+    "                    df_combination_ex[scol] = pd.to_numeric(df_combination_ex[scol], errors='coerce')\n",
+    "                \n",
+    "                    # 順位列を追加（NaNは自動的に除外される）\n",
+    "                    df_combination_ex[f\"{scol}_Rank\"] = df_combination_ex.groupby(\"分析範囲\")[scol].rank(method=\"min\", ascending=False)\n",
+    "                    \n",
+    "                    # 整数として表示する場合、NaN以外をint化（見やすさのため）\n",
+    "                    df_combination_ex[f\"{scol}_Rank\"] = df_combination_ex[f\"{scol}_Rank\"].apply(lambda x: int(x) if pd.notnull(x) else None)\n",
     "        \n",
     "                #ファイル出力\n",
     "                if file_output_mode == 1: \n",
@@ -514,7 +577,27 @@
     "                    'Community': [community_map[node] for node in G.nodes()]  # コミュニティ情報を追加\n",
     "                    })\n",
     "                #print(df_centrality)\n",
-    "        \n",
+    "\n",
+    "                # 対象のスコア列\n",
+    "                score_columns = [\n",
+    "                    \"Degree Centrality\",\n",
+    "                    \"Betweenness Centrality\",\n",
+    "                    \"Closeness Centrality\",\n",
+    "                    \"Eigenvector Centrality\"\n",
+    "                ]\n",
+    "\n",
+    "                # 分析範囲ごとに順位を付けて新しい列を追加（NaNも考慮）\n",
+    "                for scol in score_columns:\n",
+    "                    # 念のため、数値変換（非数値はNaN化される）\n",
+    "                    df_centrality[scol] = pd.to_numeric(df_centrality[scol], errors='coerce')\n",
+    "                \n",
+    "                    # 順位列を追加（NaNは自動的に除外される）\n",
+    "                    df_centrality[f\"{scol}_Rank\"] = df_centrality.groupby(\"分析範囲\")[scol].rank(method=\"min\", ascending=False)\n",
+    "                    \n",
+    "                    # 整数として表示する場合、NaN以外をint化（見やすさのため）\n",
+    "                    df_centrality[f\"{scol}_Rank\"] = df_centrality[f\"{scol}_Rank\"].apply(lambda x: int(x) if pd.notnull(x) else None)\n",
+    "\n",
+    "\n",
     "                if file_output_mode == 1: \n",
     "                    file_name_centrality = f\"output/Centrality/{row_security_code}_{row_company_name}_{col}_Centrality_{analyzed_links}_{date_time_string}.csv\"\n",
     "                    df_centrality.to_csv(file_name_centrality, encoding=\"utf_8_sig\", index=False)\n",
@@ -554,7 +637,8 @@
     "\n",
     "    print(f\"{row_target_folder}/{row_xml_filename} processed at {date_time_string}.\")\n",
     "    logging.info(f\"{row_target_folder}/{row_xml_filename} processed at {date_time_string}.\")\n",
-    "    "
+    "\n",
+    "print(f\"All process done.\")"
    ]
   },
   {
